[B]0.0.5[/B]
Fixed: Bug where dvblink port from setting was not used

[B]0.0.4[/B]
Fixed: EPG data from when using MCE recorder
Added: Preliminary (Have not been tested) support for transcoding
Changed: Reordered settings

[B]0.0.3[/B]
Added: Fix for using channel handle instead of client id when stopping channels

[B]0.0.2[/B]
Added: Scheduling of recordings using EPG based timers
Added: Enabled removal of timers
Added: Listing of recordings (using DVBLink build in recorder)
Added: Playback of recordings (using DVBLink build in recorder)
Added: Enabled removal of recordings (using DVBLink build in recorder)
Fixed: Memory several leaks
Removed: Not yet implemented steaming and timeout options 

[B]0.0.1[/B]
Beta release
Playback of live tv and radio using raw http
Listing of EPG