@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="pvr.dvblink"
-  version="0.0.5"
+  version="0.0.6"
   name="PVR DVBLink Client"
   provider-name="Barcode Madness">
   <requires>
